--- a/src/App.css
+++ b/src/App.css
@@ -540,3 +540,41 @@ footer .input-group-text {
   color: var(--color-777777);
 }
 /* Contact page end */
+
+/* Compare product */
+.compare-product-card {
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 10px;
+}
+.wishlist-card .cross,
+.compare-product-card .cross {
+  top: 15px;
+  right: 15px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.compare-product-details h5.title,
+.wishlist-card h5.title {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+
+.compare-product-details h6.price,
+.wishlist-card h6.price {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.compare-product-card .product-detail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+/* Compare product end */
